fixed spacing between excerpt and teaser image in posts listing

--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -199,7 +199,7 @@
 }
 
 .archive__item-excerpt {
-  padding-left: 0.5em;
+  margin-right: 203px;
 }
 
 article.page {
